<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayingNowView"
    android:background="@drawable/pr_source"
    android:padding="16dp"
    >
    <ImageView
        android:id="@+id/playing_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
    android:id="@+id/playing_name_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/playing_image"
    app:layout_constraintStart_toStartOf="parent"
    android:textSize="24sp"
    android:textColor="@android:color/black"
    android:text="@string/song_name"
    android:layout_marginTop="8dp"
    />
    <TextView
        android:id="@+id/playing_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/playing_image"
        app:layout_constraintStart_toEndOf="@+id/playing_name_view"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        />

    <TextView
        android:id="@+id/playing_artist_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/playing_name_view"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:text="@string/artist_name"
        android:layout_marginTop="8dp"
        />
    <TextView
        android:id="@+id/playing_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/playing_name"
        app:layout_constraintStart_toEndOf="@+id/playing_artist_view"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        />
    <Button
        android:id="@+id/playing_view_back2home_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playing_artist_view"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:background="@drawable/rounded_background"
        android:text="@string/back2home"
        android:padding="8dp"
        android:onClick="Back2Home"
        android:layout_marginLeft="16dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/playing_view_back2home_butt"
        app:layout_constraintTop_toBottomOf="@+id/playing_artist_view"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:background="@drawable/rounded_background"
        android:text="@string/previous"
        android:padding="8dp"
        android:onClick="PreviousPage"
        android:layout_marginLeft="48dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>